# RustPractice

./: .gitignore  Cargo.toml  README.md
examples/: array_and_slice.rs  c_style_enum.rs  channel_sample.rs  chinese_str.rs  closure.rs  closure_capture.rs  closure_fn.rs  closure_param.rs  cmd_args.rs  constant.rs  debug.rs  decompose_struct.rs  display.rs  enum_person.rs  executable.rs  expr.rs  fizzbuzz_function.rs  for_seq.rs  format.rs  format_output.rs  fs_sample.rs  function_param.rs  high_order_function.rs  if_else.rs  iterator_any_closure.rs  iterator_find_closure.rs  linked_list.rs  list_display.rs  literal_value.rs  loop.rs  match_base.rs  match_bind.rs  match_decompose_enum.rs  match_decompose_ref_and_point.rs  match_decompose_tuple.rs  match_guard.rs  method.rs  mod_visibility.rs  mutable_variable.rs  nest_label.rs  (+22 more)
