[package]
name = "RustPractice"
version = "0.1.0"
authors = ["blueswhisper <youlansedeninan@gmail.com>"]

[[example]]
name="hello"

[[example]]
name="fortmat_output"

[[example]]
name="debug"

[[example]]
name="display"

[[example]]
name="list_display"

[[example]]
name="format"

[[example]]
name="data_and_operator"

[[example]]
name="tuple"

[[example]]
name="array_and_slice"

[[example]]
name="structs"

[[example]]
name="enum_person"

[[example]]
name="use_keyword"

[[example]]
name="c_style_enum"

[[example]]
name="constant"

[[example]]
name="linked_list"