[package]
name = "RustPractice"
version = "0.1.0"
authors = ["blueswhisper <youlansedeninan@gmail.com>"]

[[example]]
name="hello"

[[example]]
name="fortmat_output"

[[example]]
name="debug"

[[example]]
name="display"

[[example]]
name="list_display"

[[example]]
name="format"

[[example]]
name="data_and_operator"

[[example]]
name="tuple"

[[example]]
name="array_and_slice"

[[example]]
name="structs"

[[example]]
name="enum_person"

[[example]]
name="use_keyword"

[[example]]
name="c_style_enum"

[[example]]
name="constant"

[[example]]
name="linked_list"

[[example]]
name="variable_bind"

[[example]]
name="mutable_variable"

[[example]]
name="variable_scope_and_shadow"

[[example]]
name="type_cast"

[[example]]
name="literal_value"

[[example]]
name="type_infer"

[[example]]
name="type_alias"

[[example]]
name="expr"