[package]
name = "RustPractice"
version = "0.1.0"
authors = ["blueswhisper <youlansedeninan@gmail.com>"]

[[example]]
name="hello"

[[example]]
name="format_output"

[[example]]
name="debug"

[[example]]
name="display"

[[example]]
name="list_display"

[[example]]
name="format"

[[example]]
name="data_and_operator"

[[example]]
name="tuple"

[[example]]
name="array_and_slice"

[[example]]
name="structs"

[[example]]
name="enum_person"

[[example]]
name="use_keyword"

[[example]]
name="c_style_enum"

[[example]]
name="constant"

[[example]]
name="linked_list"

[[example]]
name="variable_bind"

[[example]]
name="mutable_variable"

[[example]]
name="variable_scope_and_shadow"

[[example]]
name="type_cast"

[[example]]
name="literal_value"

[[example]]
name="type_infer"

[[example]]
name="type_alias"

[[example]]
name="expr"

[[example]]
name="if_else"

[[example]]
name="loop"

[[example]]
name="nest_label"

[[example]]
name="while"

[[example]]
name="for_seq"

[[example]]
name="match_base"

[[example]]
name="match_decompose_tuple"

[[example]]
name="match_decompose_enum"

[[example]]
name="match_decompose_ref_and_point"

[[example]]
name="decompose_struct"

[[example]]
name="match_guard"

[[example]]
name="match_bind"

[[example]]
name="if_let"

[[example]]
name="while_let"

[[example]]
name="fizzbuzz_function"

[[example]]
name="method"

[[example]]
name="closure"

[[example]]
name="closure_capture"

[[example]]
name="closure_fn"

[[example]]
name="closure_param"

[[example]]
name="function_param"

[[example]]
name="return_closure"

[[example]]
name="iterator_any_closure"

[[example]]
name="iterator_find_closure"

[[example]]
name="high_order_function"

[[example]]
name="mod_visibility"

[[example]]
name="struct_visibility"

[[example]]
name="use"

[[example]]
name="super_and_self"

[[example]]
name="thread_sample"

[[example]]
name="channel_sample"

[[example]]
name="path_sample"

[[example]]
name="raii"

[[example]]
name="open_file"

[[example]]
name="process_sample"

[[example]]
name="pipe_sample"

[[example]]
name="wait_child"

[[example]]
name="fs_sample"

[[example]]
name="cmd_args"
